@@ -51,7 +51,6 @@ public class MatchDelegate implements MatchApiDelegate {
      * includes modifiers that differ for each match (these are passed as match
      * creation params).
      */
-
     /*********************** MATCH TEAM START ***********************/
 
     @Override
@@ -64,10 +63,6 @@ public class MatchDelegate implements MatchApiDelegate {
     @Override
     public ResponseEntity<Void> updateMatchTeam(String teamId, String matchId,
             EditMatchTeamRequest editMatchTeamRequest) {
-//        for (EditPlayerRequest e : editMatchTeamRequest.getPlayers()) {
-//            System.out.println(
-//                    e.getId() + " ----" + e.getPlayerOrderDestinationPitchArea() + "----" + e.getPlayerOrder());
-//        }
         List<UpdateMatchLineupUseCase.PlayerUpdateDTO> players = editMatchTeamRequest.getPlayers().stream()
                 .map(player -> UpdateMatchLineupUseCase.PlayerUpdateDTO.builder()
                         .id(player.getId())
@@ -113,7 +108,7 @@ public class MatchDelegate implements MatchApiDelegate {
                     .map(p -> UpdateMatchLineupUseCase.buildPlayer(p, matchAndTeam.team().getRole())).toList();
         } else {
             players = Stream.concat(matchAndTeam.team().getPlayers().stream(), matchAndTeam.team().getBench().stream())
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         TeamFormationValidationResult validationResult = TeamFormationValidator.validate(players);
@@ -123,7 +118,6 @@ public class MatchDelegate implements MatchApiDelegate {
             if (!Objects.equals(match.getHome().getId(), match.getAway().getId())) {
                 throw new RuntimeException("This validation cannot happened, this is not self challenge!");
             } else {
-                System.out.println("This is validation for away user selfTeam");
                 // No error case
                 List<Player> players2;
                 GetMatchTeamUseCase.MatchAndTeam matchAndTeam2;
@@ -131,11 +125,12 @@ public class MatchDelegate implements MatchApiDelegate {
                 if (!matchAndTeam2.team().getSpecificLineup()) {
                     List<com.kjeldsen.player.domain.Player> playersDomain = playerRepo.findByTeamId(TeamId.of(teamId));
                     players2 = playersDomain.stream()
-                        .map(p -> UpdateMatchLineupUseCase.buildPlayer(p, matchAndTeam2.team().getRole())).toList();
-                    System.out.println(players2.size());
+                            .map(p -> UpdateMatchLineupUseCase.buildPlayer(p, matchAndTeam2.team().getRole())).toList();
                 } else {
-                    players2 = Stream.concat(matchAndTeam2.team().getPlayers().stream(), matchAndTeam2.team().getBench().stream())
-                        .collect(Collectors.toList());
+                    players2 = Stream
+                            .concat(matchAndTeam2.team().getPlayers().stream(),
+                                    matchAndTeam2.team().getBench().stream())
+                            .toList();
                 }
                 TeamFormationValidationResult validationResult2 = TeamFormationValidator.validate(players2);
                 String response2 = JsonUtils.prettyPrint(validationResult2);
@@ -178,170 +173,11 @@ public class MatchDelegate implements MatchApiDelegate {
         return new ResponseEntity<>(response, HttpStatus.OK);
     }
 
+    @Override
     public ResponseEntity<MatchResponse> getMatch(String matchId) {
         log.info("getMatchTeam(matchId={})", matchId);
         Match match = getMatchUseCase.get(matchId);
         MatchResponse response = MatchMapper.INSTANCE.map(match);
         return new ResponseEntity<>(response, HttpStatus.OK);
     }
-
-    // TODO I dont think this is used in FE can it be removed?
-    // TODO REWORK TO USE THE SecurityUtils.getCurrentUserId(); instead of
-    // specifying the user
-    // @Override
-    // public ResponseEntity<Void> addPlayer(String matchId,
-    // String teamId,
-    // EditPlayerRequest playerRequest) {
-    //
-    // Match match = getMatchUseCase.get(matchId);
-    //
-    // Team team = match.getHome().getId().equals(teamId)
-    // ? match.getHome()
-    // : match.getAway().getId().equals(teamId)
-    // ? match.getAway()
-    // : null;
-    // if (team == null) {
-    // throw new RuntimeException("Team not found");
-    // }
-    //
-    // PlayerStatus requestStatus =
-    // PlayerStatus.valueOf(playerRequest.getStatus().getValue());
-    //
-    // if (PlayerStatus.INACTIVE.equals(requestStatus)) {
-    // throw new RuntimeException("Cannot add inactive player");
-    // }
-    //
-    // final String playerId = playerRequest.getId();
-    //
-    // Optional<Player> optPlayer = Stream.concat(team.getPlayers().stream(),
-    // team.getBench().stream())
-    // .filter(p -> p.getId().equals(playerId))
-    // .findAny();
-    //
-    // if (optPlayer.isEmpty()) {
-    //
-    // Optional<com.kjeldsen.player.domain.Player> optDomainPlayer =
-    // playerRepo.findOneById(
-    // com.kjeldsen.player.domain.Player.PlayerId.of(playerId));
-    // if (optDomainPlayer.isPresent()) {
-    // Player playerToAdd =
-    // updateMatchLineupUseCase.buildPlayer(optDomainPlayer.get(), team.getRole());
-    // playerToAdd.setPosition(PlayerPosition.valueOf(playerRequest.getPosition().getValue()));
-    // if (PlayerStatus.ACTIVE.equals(requestStatus)) {
-    // team.getPlayers().add(playerToAdd);
-    // } else {
-    // team.getBench().add(playerToAdd);
-    // }
-    // } else {
-    // throw new RuntimeException("Player does not exist");
-    // }
-    //
-    // } else {
-    // throw new RuntimeException("Player already part of the match");
-    // }
-    //
-    // return new ResponseEntity<>(HttpStatus.OK);
-    // }
-    //
-    // @Override
-    // public ResponseEntity<String> editPlayer(String matchId, String teamId,
-    // EditPlayerRequest playerRequest) {
-    // Match match = getMatchUseCase.get(matchId);
-    //
-    // Team team = match.getHome().getId().equals(teamId)
-    // ? match.getHome()
-    // : match.getAway().getId().equals(teamId)
-    // ? match.getAway()
-    // : null;
-    // if (team == null) {
-    // throw new RuntimeException("Team not found");
-    // }
-    //
-    // final String playerId = playerRequest.getId();
-    //
-    // Optional<Player> optPlayer = Stream.concat(team.getPlayers().stream(),
-    // team.getBench().stream())
-    // .filter(p -> p.getId().equals(playerId))
-    // .findAny();
-    //
-    // if (optPlayer.isPresent()) {
-    // Player player = optPlayer.get();
-    //
-    // if (playerRequest.getStatus() != null) {
-    // if
-    // (!player.getStatus().equals(PlayerStatus.valueOf(playerRequest.getStatus().getValue())))
-    // {
-    // if
-    // (PlayerStatus.INACTIVE.equals(PlayerStatus.valueOf(playerRequest.getStatus().getValue())))
-    // {
-    // // Players cannot be deactivated in lineup.
-    // throw new RuntimeException(
-    // "Inactive players should be removed from the lineup with delete."); //
-    // Changing status requires moving
-    // }
-    // if
-    // (PlayerStatus.ACTIVE.equals(PlayerStatus.valueOf(playerRequest.getStatus().getValue())))
-    // {
-    // // Moving player from bench to active.
-    // team.getBench().removeIf(p -> p.getId().equals(playerId));
-    // team.getPlayers().add(player);
-    // player.setStatus(PlayerStatus.ACTIVE);
-    // }
-    // if
-    // (PlayerStatus.BENCH.equals(PlayerStatus.valueOf(playerRequest.getStatus().getValue())))
-    // {
-    // // Moving player from active to bench.
-    // team.getPlayers().removeIf(p -> p.getId().equals(playerId));
-    // team.getBench().add(player);
-    // player.setStatus(PlayerStatus.BENCH);
-    // }
-    // }
-    // }
-    //
-    // if (playerRequest.getPosition() != null) {
-    // player.setPosition(PlayerPosition.valueOf(playerRequest.getPosition().getValue()));
-    // }
-    //
-    // matchWriteRepository.save(match);
-    //
-    // } else {
-    // throw new RuntimeException("Player not found");
-    // }
-    //
-    // return new ResponseEntity<>(HttpStatus.OK);
-    //
-    // }
-    //
-    // @Override
-    // public ResponseEntity<Void> deletePlayer(String matchId,
-    // String teamId,
-    // String playerId) {
-    //
-    // Match match = getMatchUseCase.get(matchId);
-    //
-    // Team team = match.getHome().getId().equals(teamId)
-    // ? match.getHome()
-    // : match.getAway().getId().equals(teamId)
-    // ? match.getAway()
-    // : null;
-    // if (team == null) {
-    // throw new RuntimeException("Team not found");
-    // }
-    //
-    // Optional<Player> optPlayer = Stream.concat(team.getPlayers().stream(),
-    // team.getBench().stream())
-    // .filter(p -> p.getId().equals(playerId))
-    // .findAny();
-    //
-    // if (optPlayer.isPresent()) {
-    // team.getPlayers().removeIf(player -> player.getId().equals(playerId));
-    // team.getBench().removeIf(player -> player.getId().equals(playerId));
-    //
-    // matchWriteRepository.save(match);
-    // } else {
-    // throw new RuntimeException("Player not found");
-    // }
-    //
-    // return new ResponseEntity<>(HttpStatus.OK);
-    // }
 }
